<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".HomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#8434F6">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edttext"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"/>
    <EditText
        android:id="@+id/edtText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="12"
        android:hint="@string/edttext"
        android:inputType="text"
        android:textColor="@color/black"
        android:minHeight="48dp"
        android:background="@drawable/edit_text_background"
        android:textColorHint="#546E7A"
        android:padding="10dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        tools:ignore="TextContrastCheck,VisualLintTextFieldSize" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edtnum"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="11dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"/>
    <EditText
        android:id="@+id/edtNum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="12"
        android:hint="@string/edtnum"
        android:inputType="number"
        android:background="@drawable/edit_text_background"
        android:padding="12dp"
        android:textColor="@color/black"
        android:minHeight="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:textColorHint="#546E7A"
        tools:ignore="VisualLintTextFieldSize" />
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCheck"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/line"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="8sp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGen"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/genaret"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/btnReset"
            android:text="@string/reset"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/edit_text_background"
        android:layout_margin="12dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/out"
                android:textSize="21sp"
                android:textColor="@color/black"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/btnCopy"
                android:layout_width="28dp"
                android:layout_height="30dp"
                android:layout_marginStart="160dp"
                android:background="@drawable/baseline_content_copy_24"
                tools:ignore="RtlHardcoded" />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="28dp"
                android:layout_height="32dp"
                android:id="@+id/btnShare"
                android:layout_marginStart="11dp"
                android:background="@drawable/baseline_share_24"
                android:textStyle="bold" />

        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:padding="12dp">
            <TextView
                android:id="@+id/txtOutput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:hint="@string/result"
                android:textColor="@color/black"
                android:textColorHint="#546E7A"
                android:textSize="16sp" />
        </ScrollView>
    </LinearLayout>

</LinearLayout>